--- a/qstn-28/css/style.css
+++ b/qstn-28/css/style.css
@@ -25,10 +25,10 @@
     padding: 5px 10px;
 }
 .adminDeleteColor{
-    background-color: rgb(228, 200, 200);
+    background-color:  #0b7777;
 }
 .adminEditColor{
-    background-color:rgb(184, 216, 235)
+    background-color: #0b7777;
 }
 .displayEditDiv{ 
     padding: 20px;
@@ -92,8 +92,29 @@
     font-weight: bold;
     color:white;
 }
-.logoutConfirm{
+.logoutConfirm,.deleteConfirm{
     display:none;
-  
-    
+}
+.pageDisplayDiv{
+    margin: 10px 5px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    background-color:  #0b7777;
+}
+.editInput{
+    border: none;
+    border-radius: 20px;
+    padding: 5px 10px;
+    background-color:  #bffafa;
+}
+.editButton{
+    background-color: #0b7777;
+    color: white;
+    font-size: 16px;
+    border-radius: 20px;
+    border: none;
+    padding: 10px 20px;
+}
+.iconBackground{
+    background-color: #0b7777;
 }
